--- a/Simple_To-Do_App_Project_Module 3/tasks.json
+++ b/Simple_To-Do_App_Project_Module 3/tasks.json
@@ -1,2 +1,12 @@
-[]
+[
+    {
+        "task": "Buy groceries",
+        "done": false
+    },
+    {
+        "task": "Finish homework",
+        "done": true
+    }
+]
+
 
